<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>eu.dc4eu</groupId>
	<artifactId>gateway</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>dc4eu emrex gateway</name>
	<description>Emrex gateway</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jsonschema2pojo</groupId>
			<artifactId>jsonschema2pojo-maven-plugin</artifactId>
			<version>1.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.ext</groupId>
			<artifactId>jersey-spring6</artifactId>
			<version>3.1.9</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-jaxb</artifactId>
			<version>3.1.9</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>3.1.9</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>3.1.9</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.18.0</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.5</version>
		</dependency>
		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>1.78.1</version>
		</dependency>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-jaxrs2-jakarta</artifactId>
			<version>2.2.25</version>
		</dependency>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations-jakarta</artifactId>
			<version>2.2.25</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jsonschema2pojo</groupId>
				<artifactId>jsonschema2pojo-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<id>1</id>
						<configuration>
							<annotationStyle>jackson2</annotationStyle>
							<includeAdditionalProperties>false</includeAdditionalProperties>
							<sourcePaths>
								<sourcePath>${project.basedir}/src/main/resources/emreg/emregjsonschema.json</sourcePath>
							</sourcePaths>
							<targetPackage>eu.dc4eu.gateway.emreg</targetPackage>
						</configuration>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.swagger.codegen.v3</groupId>
				<artifactId>swagger-codegen-maven-plugin</artifactId>
				<version>3.0.57</version>
				<executions>
					<execution>
						<id>pdf-stampling</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/converter/dc4eu-converter.json</inputSpec>

							<artifactId>dc4eu-converter</artifactId>
							<output>${basedir}/target/generated-sources</output>
							<language>java</language>
							<library>jersey3</library>

							<modelPackage>eu.dc4eu.gateway.converter</modelPackage>


							<generateSupportingFiles>false</generateSupportingFiles>
							<generateApis>false</generateApis>
							<configOptions>
								<sourceFolder>src/main/java</sourceFolder>
								<!--interfaceOnly>true</interfaceOnly-->
								<dateLibrary>java8</dateLibrary>
								<singleContentTypes>true</singleContentTypes>

								<jakarta>true</jakarta>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<phase>none</phase>
					</execution>
					<execution>
						<id>xjc-elmo-api</id>
						<goals>
							<goal>xjc</goal>
						</goals>
						<phase>generate-sources</phase>
						<configuration>
							<!-- Set the package of the generated code -->
							<packageName>eu.dc4eu.gateway.elmo.api</packageName>
							<!-- Define the directory where we should find the DTD files -->
							<sources>
								<source>src/main/resources/schema/elmo-schema-1.7.0.xsd</source>
							</sources>
							<clearOutputDir>true</clearOutputDir>
							<noPackageLevelAnnotations>true</noPackageLevelAnnotations>
							<catalog>src/main/resources/schema/own-catalog.xml</catalog>
						</configuration>
					</execution>
					<execution>
						<id>xjc-europass-codes</id>
						<goals>
							<goal>xjc</goal>
						</goals>
						<phase>generate-sources</phase>
						<configuration>
							<packageName>eu.dc4eu.gateway.europass</packageName>
							<sources>
								<source>src/main/resources/schema/EUROPASS_ISOCountries_V1.1.xsd</source>
							</sources>
							<clearOutputDir>false</clearOutputDir>
							<noPackageLevelAnnotations>true</noPackageLevelAnnotations>
						</configuration>
					</execution>
					<execution>
						<id>xjc-xmldsig</id>
						<goals>
							<goal>xjc</goal>
						</goals>
						<phase>generate-sources</phase>
						<configuration>
							<packageName>eu.dc4eu.gateway.xmldsig</packageName>
							<sources>
								<source>src/main/resources/schema/xmldsig-core-schema.xsd</source>
							</sources>
							<clearOutputDir>false</clearOutputDir>
							<noPackageLevelAnnotations>true</noPackageLevelAnnotations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
